# local-vector-rag

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/raw/samples/: sample_document.docx  sample_document.md  vector_search_guide.txt
scripts/: generate_sample_documents.py
src/: __init__.py  collection.py  config.py  logger.py
src/benchmarks/: __init__.py  data.py  metrics.py  report.py  runner.py
src/cli/: QUICK_REFERENCE.md  USER_GUIDE.md  __init__.py  commands.py
src/embeddings/: __init__.py  model.py  persistence.py  pipeline.py
src/generation/: __init__.py  cache.py  citations.py  client.py  confidence.py  conversation.py  model.py  prompts.py
src/ingestion/: __init__.py  chunker.py  loader.py  persistence.py
src/ingestion/extractors/: __init__.py  docx.py  markdown.py  pdf.py
src/query/: __init__.py  pipeline.py
src/vectorstore/: __init__.py  brute_force.py  hnsw.py  persistence.py  similarity.py
templates/: expert.j2
